--- a/packages/clerk-js/package.json
+++ b/packages/clerk-js/package.json
@@ -55,6 +55,7 @@
     "dequal": "2.0.3",
     "qrcode.react": "3.1.0",
     "qs": "6.11.0",
+    "react-intersection-observer": "^9.5.2",
     "regenerator-runtime": "0.13.11"
   },
   "peerDependencies": {
